@@ -43,6 +43,7 @@ systemd System and Service Manager
  	- fix error message in socket label util;
  	- rename id _UNIT_FILE_PRESET_MODE_MAX to _UNIT_FILE_PRESET_MAX;
  	- remove eventfd util;
+ 	- remove ask-password-api util;
  * virt:
  	- rework container detection logic;
  	- detect s390 virtualization;
